
- Added parse_ini_string() function. (grange at lemonde dot fr, Arnaud) 
- Added str_getcsv() function. (Sara)
- Added ability to send user defined HTTP headers with SOAP request.
  (Brian J.France, Dmitry)
- Added concatenation option to bz2.decompress stream filter.
  (Keisial at gmail dot com, Greg)
- Added support for using compressed connections with PDO_mysql. (Johannes)

- Deprecated define_syslog_variables(). (Kalle)

- Fixed bug causing the algorithm parameter of mhash() to be modified. (Scott)
- Fixed invalid calls to free when internal fileinfo magic file is used. (Scott)
- Synced changes from libmagic 4.26 to bundled libmagic. (Scott)

- Fixed bug #46421 (SplFileInfo not correctly handling /). (Etienne)
- Fixed bug #46331 - (Segfault when using internal fileinfo magic file on big
  endian systems). (Scott)
- Fixed bug #46285 (lastInsertId() returns "0" when a deferenced PDOStatement is
  executed). (Johannes)
- Fixed bug #46238 (Segmentation fault on static call with empty string method).
  (Felipe)
- Fixed bug #46205 (Closure - Memory leaks when ReflectionException is thrown).
  (Dmitry)
- Fixed bug #46194 (SIGSEGV when requested file is not found). (Greg)
- Fixed bug #46192 (ArrayObject with objects as storage serialization).
  (Etienne)
- Fixed bug #46185 (importNode changes the namespace of an XML element). (Rob)
- Fixed bug #46178 (memory leak in ext/phar). (Greg)
- Fixed bug #46160 (SPL - Memory leak when exception is thrown in offsetSet).
  (Felipe)
- Fixed Bug #46147 (after stream seek, appending stream filter reads incorrect data).
  (Greg)
- Fixed bug #46115 (Memory leak when calling a method using Reflection).
  (Dmitry)
- Fixed bug #46106 (Memory leaks when using global statement). (Dmitry)
- Fixed bug #46099 (Xsltprocessor::setProfiling - memory leak). (Felipe, Rob).
- Fixed bug #46087 (DOMXPath - segfault on destruction of a cloned object).
  (Ilia)
- Fixed bug #46086 (Segfault when accessing fileinfo class properties).
  (Scott)